refactor: Migrate ContextFragment to use IContextManager and improve dynamic content